--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".MyBroadcastReceiver">
+            <intent-filter>
+                <action android:name="notification" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".BroadcastOutlier">
+            <intent-filter>
+                <action android:name="notification" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
